# arcticflow

./: CMakeLists.txt  LICENSE  Main.cpp  PreProcessor.cpp  README.md
demo/: helloworld.arc
include/: SimAST.h  SimAST2IR.h  preAST.h
parser/: SimAST.cpp  SimAST2IR.cpp  lexer.l  parser.y
parser/PreProcessor/: preLexer.l  preParser.y
